# blanc-os

./: .gitignore  Cargo.toml  log.txt  x86_64-rust-os.json
.cargo/: config.toml
applications/do-nothing/: Cargo.toml
applications/do-nothing/src/: main.rs
applications/do_nothing/: Cargo.toml  do_nothing.json
applications/do_nothing/.cargo/: config.toml
applications/do_nothing/src/: main.rs
applications/hello_world/: Cargo.toml
applications/hello_world/.cargo/: config.toml
applications/hello_world/src/: main.rs
applications/shell/: Cargo.toml  x86_64-rust-os.json
applications/shell/.cargo/: config.toml
applications/shell/crate/coop/src/: keyboard.rs
applications/shell/crate/fs/src/: file_table.rs  inode.rs  ramdisk.rs
applications/shell/crate/gdt/: Cargo.toml
applications/shell/crate/gdt/src/: lib.rs
applications/shell/crate/memory/: Cargo.toml
applications/shell/crate/memory/src/: phys.rs
applications/shell/crate/memory/src/allocator/: mod.rs
applications/shell/crate/serial/: Cargo.toml
applications/shell/crate/serial/src/: lib.rs
applications/shell/crate/task/: Cargo.toml
applications/shell/crate/task/src/: context_switch.rs  elf.rs  lib.rs  scheduler.rs  task.rs
applications/shell/src/: main.rs  syscall_interrupts.s
crate/allocator/: Cargo.toml
crate/allocator/src/: lib.rs  linked_list.rs
crate/coop/: Cargo.toml
crate/coop/src/: executor.rs  keyboard.rs  lib.rs  mouse.rs
crate/fs/: Cargo.toml
crate/fs/src/: file_table.rs  inode.rs  lib.rs  ramdisk.rs
crate/gdt/: Cargo.toml
crate/gdt/src/: lib.rs
crate/interrupts/: Cargo.toml
crate/interrupts/src/: lib.rs  syscall.rs  syscall_interrupts.s
crate/memory/: Cargo.toml
crate/memory/src/: address_space.rs  frame.rs  kpbox.rs  lib.rs  phys.rs  virt.rs
crate/memory/src/allocator/: linked_list.rs  mod.rs
crate/memory/src/virt/: address_space.rs  mod.rs
crate/page_allocator/: Cargo.toml
crate/page_allocator/src/: lib.rs
crate/printer/: Cargo.toml
crate/printer/src/: lib.rs
crate/stack/: Cargo.toml
crate/stack/src/: lib.rs
crate/task/: Cargo.toml
crate/task/src/: context_switch.rs  elf.rs  elf2.rs  lib.rs  scheduler.rs  stack_frame.rs  task.rs
docker/: .bash_aliases  Dockerfile  README.md  config.toml  entrypoint.sh
simple_boot/: Cargo.toml
simple_boot/src/: main.rs
src/: do-nothing  lib.rs  main.rs  shell
tests/: advanced_boot.rs  basic_boot.rs  break_point.rs  divide_by_zero.rs  should_panic.rs  stack_overflow.rs  task.rs
