[package]
name = "blanc_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "simple_boot",
    "crate/*"
]

[dependencies]
x86_64 = "0.14.4"
spin = { version = "0.5.2" }


# Global Descriptor Table
gdt = { path = "crate/gdt" } 

# Interrupt Handler
interrupts = { path = "crate/interrupts" }

# Serial Printer
serial = { path = "crate/serial" }

# OS Printer
printer = { path = "crate/printer" }

# Memory
memory = { path = "crate/memory" }

# Heap Allocator
allocator = { path = "crate/allocator" } 

# Process Stack
stack = { path = "crate/stack" }

# Task structures
task = { path = "crate/task" }

# Cooperative Multitasking
coop = { path = "crate/coop" }

# Virtual File System
fs = { path = "crate/fs" }

[dependencies.bootloader]
version = "0.10.7"


[package.metadata.bootloader]
map-physical-memory = true

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

