[package]
name = "blanc_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [ "simple_boot", "crate/*", ]
exclude = [ "applications/*", ]



[dependencies]
x86_64 = "0.14.4"
spin = { version = "0.5.2" }
xmas-elf = "0.6.2"
os_units = "0.4.2"
elfloader = "0.14.0"

# Global Descriptor Table
gdt = { path = "crate/gdt" } 

# Interrupt Handler
interrupts = { path = "crate/interrupts" }

# Serial Printer
serial = { path = "crate/serial" }

# OS Printer
printer = { path = "crate/printer" }

# Memory Management
memory = { path = "crate/memory" }

# Task structures
task = { path = "crate/task" }

# Cooperative Multitasking
coop = { path = "crate/coop" }

#############################
# Testing Imports

volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"]}
#############################


[dependencies.bootloader]
version = "0.10.7"

[package.metadata.bootloader]
map-page-table-recursively = true
framebuffer-address = "0xFFFF_FF00_000A_0000"
boot-info-address = "0xFFFF_FF00_002A_0000"
kernel-stack-address = "0xFFFF_FF00_003A_0000"
recursive-index = 508
                         
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
