[package]
name = "shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# Printer
printer = { path = "../../crate/printer" }
serial = { path = "../../crate/serial" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
