[package]
name = "coop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pc-keyboard = "0.5.0"
spin = "0.5.2"
x86_64 = "0.14.2"
bitflags = "1.3.2"

# Printer
printer = { path = "../printer" }

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]