[package]
name = "fs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
spin = "0.5.2"

# Printer
printer = { path = "../printer" }

[dependencies.hashbrown]
version = "0.11"
default-features = false
features = ["ahash"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

