[package]
name = "gdt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spinning_top = { version = "0.2.4", features = ["nightly"] }
x86_64 = "0.14.4"
os_units = "0.4.2"
# Printer
printer = { path = "../printer" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[dependencies.conquer-once]
version = "0.2.0"
default-features = false
