[package]
name = "interrupts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.14.4"
spin = "0.5.2"

# Pic Controller
pic8259 = "0.10.1"

# Global Descriptor Table
gdt = { path = "../gdt" } 

# Printer
printer = { path = "../printer" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]