[package]
name = "printer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conquer-once = { version = "0.2.1", default-features = false }
log = { version = "0.4.8" }
spin = "0.5.2"
x86_64 = "0.14.4"

[dependencies.bootloader]
version = "0.10.7"

[dependencies.font8x8]
version = "0.2.5"
default-features = false
features = ["unicode"]