[package]
name = "task"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"
hashbrown = "0.11.2"
xmas-elf = "0.8.0"
x86_64 = "0.14.4"
intrusive-collections = "0.9.2"
os_units = "0.4.2"
elfloader = "0.14.0"


# Memory
memory = { path = "../memory" }

# File system
fs = { path = "../fs" }

# Printer
printer = { path = "../printer" }

gdt = {path = "../gdt" }

[dependencies.bootloader]
version = "0.10.7"

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]